[gd_scene load_steps=4 format=3 uid="uid://0uldvs6gsiqw"]

[ext_resource type="Script" uid="uid://b64m27ybjiuye" path="res://Scripts/Game Scripts/game_state_ui.gd" id="1_jc81x"]
[ext_resource type="Texture2D" uid="uid://dj7v4r3b67apt" path="res://Assets/map_assets/red_bull.png" id="2_rdq20"]

[sub_resource type="SystemFont" id="SystemFont_jc81x"]
font_names = PackedStringArray("Perfect DOS VGA 437 Win")
subpixel_positioning = 0

[node name="game_state_UI" type="CanvasLayer"]
script = ExtResource("1_jc81x")

[node name="health_label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = SubResource("SystemFont_jc81x")
theme_override_font_sizes/font_size = 25
text = "5/5 HP"

[node name="Cans" type="Node" parent="."]

[node name="red_bull_can" type="Sprite2D" parent="Cans"]
visible = false
position = Vector2(8, 48)
scale = Vector2(0.03, 0.03)
texture = ExtResource("2_rdq20")

[node name="red_bull_can_2" type="Sprite2D" parent="Cans"]
visible = false
position = Vector2(40, 48)
scale = Vector2(0.03, 0.03)
texture = ExtResource("2_rdq20")

[node name="red_bull_can_3" type="Sprite2D" parent="Cans"]
visible = false
position = Vector2(72, 48)
scale = Vector2(0.03, 0.03)
texture = ExtResource("2_rdq20")
